Feature: simplificao de cadastro para loterj

--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" *ngIf="!isLoterj">
             <div class="col-md-12" [hidden]="(autoPreenchimento && !cpfValidado) || (!autoPreenchimento && formSocial)">
                 <div class="form-group mb-4">
                     <div class="input-md">
@@ -41,7 +41,7 @@
             </div>
             <input type="hidden" id="nomeCompleto" formControlName="nomeCompleto">
         </div>
-        <div class="row">
+        <div class="row" *ngIf="!isLoterj">
             <div class="col-md-12" [hidden]="autoPreenchimento">
                 <div class="form-group mb-4">
                     <div class="input-md">
@@ -74,25 +74,7 @@
                 </div>
             </div>
         </div>
-        <div *ngIf="isLoterj">
-            <div class="col-md-12">
-                <div class="form-group mb-4" [ngClass]="applyCssDivError('email')">
-                    <div class="input-md">
-                        <input type="text" id="confirmarEmail" class="form-control inverted-out"
-                               [ngClass]="applyCssInputError('confirmarEmail')"
-                               [readonly]="formSocial"
-                               formControlName="confirmarEmail" placeholder=" "
-                               (paste)="blockPaste($event)" autocomplete="off"
-                        >
-                        <label for="email">{{'geral.confirmarEmail' | translate}}</label>
-                    </div>
-
-                    <app-error-msg [control]="form.get('confirmarEmail')" label="{{'geral.confirmarEmail' | translate}}"
-                                   class="text-left"></app-error-msg>
-                </div>
-            </div>
-        </div>
-        <div class="row">
+        <div class="row" *ngIf="!isLoterj">
             <div class="col-md-12">
                 <div class="form-group mb-4">
                     <div class="input-md">
@@ -125,7 +107,7 @@
                 </div>
             </div>
         </div>
-        <div class="row" *ngIf="!formSocial">
+        <div class="row" *ngIf="!formSocial && !isLoterj">
             <div class="col-md-12">
                 <div class="form-group mb-4">
                     <div class="input-md">
