--- a/src/app/clientes/indique-ganhe/indique-ganhe.component.html
+++ b/src/app/clientes/indique-ganhe/indique-ganhe.component.html
@@ -95,7 +95,7 @@
                             </span>
                         </ng-template>
                         <div class="input-group datepicker-group">
-                            <i class="fa fa-calendar"></i>
+                            <i class="fa fa-calendar" (click)="datepicker.toggle()"></i>
                             <input
                                 type="text"
                                 class="form-control inverted-out"
