--- a/src/app/clientes/promocao/promocao.component.html
+++ b/src/app/clientes/promocao/promocao.component.html
@@ -232,8 +232,8 @@
                                         <th data-field="quantidade" (click)="sortBy('quantidade')"><span style="cursor: pointer;">{{ 'geral.quantidade' | translate }} &uarr;&darr;</span></th>
                                         <th data-field="quantidadeUtilizada" (click)="sortBy('quantidadeUtilizada')"><span style="cursor: pointer;">{{ 'geral.quantidadeUtilizada' | translate }} &uarr;&darr;</span></th>
                                         <th data-field="game" (click)="sortBy('game')"><span style="cursor: pointer;">{{ 'geral.jogo' | translate }} &uarr;&darr;</span></th>
-                                        <th data-field="game" (click)="sortBy('game')"><span style="cursor: pointer;">Prêmio &uarr;&darr;</span></th>
-                                        <th data-field="status" (click)="sortBy('status')"><span style="cursor: pointer;">Status &uarr;&darr;</span></th>
+                                        <th data-field="game" (click)="sortBy('game')"><span style="cursor: pointer;">{{ 'rodada_gratis.premio' | translate }} &uarr;&darr;</span></th>
+                                        <th data-field="status" (click)="sortBy('status')"><span style="cursor: pointer;">{{ 'geral.status' | translate }} &uarr;&darr;</span></th>
                                         <th></th>
                                     </tr>
                                 </thead>
@@ -273,7 +273,7 @@
                                                         (click)="openGame(rodada.gameFront, rodada.fornecedorFront)">{{ 'geral.jogarAgora' | translate }}
                                                     </button>
                                                     <ng-template #elseResgatePremio>
-                                                        <button [disabled]="isButtonDisabled" *ngIf="(rodada.status == 'resgate' && rodada.ativo == 1 && rodada.customStatusFreeSpin == 'Concluída' && rodada.dataTermino.date >= this.formattedCurrentDate && rodada.tipoSaldoConvertido == 'bonus' && rodada.premio > 0 ) ? true : false " class="btn btn-custom btn-jogar-rodada" (click)="redeemPrize(rodada.id)">{{ 'rodada_gratis.resgatarPremio' | translate }}
+                                                        <button [disabled]="isButtonDisabled" *ngIf="(rodada.status == 'resgate' && rodada.customStatusFreeSpin == 'Concluída' && rodada.dataTermino.date >= this.formattedCurrentDate && rodada.tipoSaldoConvertido == 'bonus' && rodada.premio > 0 ) ? true : false " class="btn btn-custom btn-jogar-rodada" (click)="redeemPrize(rodada.id)">{{ 'rodada_gratis.resgatarPremio' | translate }}
                                                         </button>
                                                     </ng-template>
                                                 </ng-container>
@@ -293,12 +293,21 @@
                                 <p class="info-rodada">{{ 'rodada_gratis.rodadaGratis' | translate }}: <span>Expira em {{ rodada.dataTermino.date | moment: 'DD/MM/YYYY' }}</span></p>
                                 <p class="info-rodada">{{ 'geral.valor' | translate }}: <span>{{ rodada.valor | currency }}</span></p>
                                 <p class="info-rodada">{{ 'geral.quantidade' | translate }}: <span>{{ rodada.quantidade }}</span></p>
+                                <p class="info-rodada">{{ 'geral.quantidadeUtilizada' | translate }}: <span>{{ rodada.quantidadeUtilizada }}</span></p>
                                 <p class="info-rodada">{{ 'geral.jogo' | translate }}: <span>{{ rodada.gameName }}</span></p>
+                                <p class="info-rodada">{{ 'rodada_gratis.premio' | translate }}: <span>{{ rodada.premio | currency }}</span></p>
+                                <p class="info-rodada">{{ 'geral.status' | translate }}: <span>{{ rodada.customStatusFreeSpin }}</span></p>
                                 <div class="button-rodada">
-                                    <button class="btn btn-custom btn-jogar-rodada"
-                                        [ngClass]="rodada.status != 'Ativo' ? 'disabled-button' : ''"
-                                        (click)="openGame(rodada.gameFront, rodada.fornecedorFront)">{{ 'geral.jogarAgora' | translate }}
-                                    </button>
+                                    <ng-container>
+                                        <button *ngIf="(rodada.customStatusFreeSpin == 'Pendente') && (rodada.dataTermino.date >= formattedCurrentDate) ; else elseResgatePremio " class="btn btn-custom btn-jogar-rodada"
+                                            [ngClass]="rodada.customStatusFreeSpin != 'Pendente' ? 'disabled-button' : ''"
+                                            (click)="openGame(rodada.gameFront, rodada.fornecedorFront)">{{ 'geral.jogarAgora' | translate }}
+                                        </button>
+                                        <ng-template #elseResgatePremio>
+                                            <button [disabled]="isButtonDisabled" *ngIf="(rodada.status == 'resgate' && rodada.customStatusFreeSpin == 'Concluída' && rodada.dataTermino.date >= this.formattedCurrentDate && rodada.tipoSaldoConvertido == 'bonus' && rodada.premio > 0 ) ? true : false " class="btn btn-custom btn-jogar-rodada" (click)="redeemPrize(rodada.id)">{{ 'rodada_gratis.resgatarPremio' | translate }}
+                                            </button>
+                                        </ng-template>
+                                    </ng-container>
                                 </div>
                             </div>
                         </ng-container>
