--- a/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
+++ b/src/app/casino/wall/components/wall-game-card/wall-game-card.component.scss
@@ -28,6 +28,7 @@
         height: min-content;
         border-radius: 10px;
         object-fit: cover;
+        min-height: 90px;
     }
 
     &__info {
@@ -155,6 +156,11 @@
     min-height: 90px;
 }
 
+.game-card__image {
+    min-height: 146px;
+    min-width: 146px;
+}
+
 @media only screen and (min-width: 336px){
     .game-card--inline{
         width: 100px;
@@ -163,6 +169,11 @@
 
     .game-card--inline > .game-card__image{
         min-height: 100px;
+    }
+
+    .game-card__image {
+        min-height: 100px;
+        min-width: 100px;
     }
 }
 
@@ -175,6 +186,11 @@
     .game-card--inline > .game-card__image{
         min-height: 95px;
     }
+
+    .game-card__image {
+        min-height: 95px;
+        min-width: 95px;
+    }
 }
 
 @media only screen and (min-width: 412px){
@@ -185,6 +201,11 @@
 
     .game-card--inline > .game-card__image{
         min-height: 120px;
+    }
+
+    .game-card__image {
+        min-height: 120px;
+        min-width: 120px;
     }
 }
 
@@ -197,6 +218,11 @@
     .game-card--inline > .game-card__image{
         min-height: 140px;
     }
+
+    .game-card__image {
+        min-height: 140px;
+        min-width: 140px;
+    }
 }
 
 @media only screen and (min-width: 912px){
@@ -208,6 +234,11 @@
     .game-card--inline > .game-card__image{
         min-height: 165px;
     }
+
+    .game-card__image {
+        min-height: 165px;
+        min-width: 165px;
+    }
 }
 
 @media only screen and (min-width: 1920px){
@@ -218,5 +249,10 @@
 
     .game-card--inline > .game-card__image{
         min-height: 170px;
+    }
+
+    .game-card__image {
+        min-height: 170px;
+        min-width: 170px;
     }
 }
