Update: utilizar os escudos de times da Lsports

--- a/src/app/esportes/futebol/default/listagem/futebol-listagem.component.html
+++ b/src/app/esportes/futebol/default/listagem/futebol-listagem.component.html
@@ -228,12 +228,12 @@
                                 <div class="nome" [ngStyle]="{'width.px': nomesJogoWidth}">
                                     <div class="escudo-container">
                                         <span *ngIf="jogo.time_a_img; else defaulImage" class="escudo">
-                                            <img src="https://cdn.wee.bet/img/times/m/{{jogo.time_a_img}}.png" size="s"
+                                            <img src="https://cdn.wee.bet/img/times_v2/m/{{jogo.time_a_img}}.png" size="s"
                                                  class="escudo-img">
                                         </span>
                                         <ng-template #defaulImage>
                                             <span class="escudo">
-                                                <img src="https://cdn.wee.bet/img/times/m/default.png" size="s"
+                                                <img src="https://cdn.wee.bet/img/times_v2/m/default.png" size="s"
                                                     class="escudo-img">
                                             </span>
                                         </ng-template>
@@ -243,12 +243,12 @@
                                     </div>
                                     <div class="escudo-container">
                                         <span *ngIf="jogo.time_b_img; else defaulImageB" class="escudo">
-                                            <img src="https://cdn.wee.bet/img/times/m/{{jogo.time_b_img}}.png" size="s"
+                                            <img src="https://cdn.wee.bet/img/times_v2/m/{{jogo.time_b_img}}.png" size="s"
                                                  class="escudo-img">
                                         </span>
                                         <ng-template #defaulImageB>
                                             <span class="escudo">
-                                                <img src="https://cdn.wee.bet/img/times/m/default.png" size="s"
+                                                <img src="https://cdn.wee.bet/img/times_v2/m/default.png" size="s"
                                                     class="escudo-img">
                                             </span>
                                         </ng-template>
