--- a/src/app/esportes/generico/basquete-jogo/basquete-jogo.component.html
+++ b/src/app/esportes/generico/basquete-jogo/basquete-jogo.component.html
@@ -141,10 +141,10 @@
                     <div class="time-a">
                         <div *ngIf="!showLoadingIndicator">
                             <span *ngIf="jogo?.time_a_img; else defaulImageA"><img
-                                    src="https://cdn.wee.bet/img/times/m/{{jogo?.time_a_img}}.png" size="m">
+                                    src="https://cdn.wee.bet/img/times_v2/m/{{jogo?.time_a_img}}.png" size="m">
                             </span>
                             <ng-template #defaulImageA class="escudo">
-                                <img src="https://cdn.wee.bet/img/times/m/default.png" size="m" class="escudo-img">
+                                <img src="https://cdn.wee.bet/img/times_v2/m/default.png" size="m" class="escudo-img">
                             </ng-template>
                         </div>
                         <div class="time-nome">
@@ -157,10 +157,10 @@
                     <div class="time-b">
                         <div *ngIf="!showLoadingIndicator">
                             <span *ngIf="jogo?.time_b_img; else defaulImageB"><img
-                                    src="https://cdn.wee.bet/img/times/m/{{jogo?.time_b_img}}.png" size="m">
+                                    src="https://cdn.wee.bet/img/times_v2/m/{{jogo?.time_b_img}}.png" size="m">
                             </span>
                             <ng-template #defaulImageB class="escudo">
-                                <img src="https://cdn.wee.bet/img/times/m/default.png" size="m" class="escudo-img">
+                                <img src="https://cdn.wee.bet/img/times_v2/m/default.png" size="m" class="escudo-img">
                             </ng-template>
                         </div>
                         <div class="time-nome">
