--- a/src/app/shared/layout/menu-footer/menu-footer.component.css
+++ b/src/app/shared/layout/menu-footer/menu-footer.component.css
@@ -108,7 +108,7 @@
 
 @media only screen and (max-width: 1024px) {
     #bottom-bar {
-        z-index: 999;
+        z-index: 2147483647;
     }
 
     #definir {
