--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -140,12 +140,14 @@ iframe{
 }
 
 .btn-custom, .btn-custom2 {
-    width: 100%;
     margin: 10px 0;
-    padding: 10px 20px;
-    display: flex;
+    padding: 10px;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+    white-space: nowrap;
+    min-width: 260px;
 }
 
 @media only screen and (max-width: 1024px) {
