--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -1,40 +1,38 @@
-.game-view {
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    scroll-behavior: smooth;
-    display: flex;
 
-}
-
-@media (max-width: 1024px) {
+@media (max-width: 482px) {
 
     .header-game-view {
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 10px;
-        background-color: #000; /* Ajuste a cor de fundo conforme necessário */
-        color: #fff; /* Ajuste a cor do texto conforme necessário */
+        background-color: #000;
+        color: #fff;
     }
 
     .game-view {
         width: 100%;
         height: 100%;
-        overflow: hidden;
+        overflow: auto;
         display: flex;
         flex-direction: column;
+    }
+
+    .game-view-mobile {
+        width: 100%;
+        z-index: 10000;
+        height: 100%;
     }
 
     .game-name {
         flex-grow: 1;
         font-size: 18px;
-        color: #fff; /* Ajuste a cor do texto conforme necessário */
+        color: #fff;
     }
 
     .buttons-game-view {
         display: flex;
-        gap: 10px; /* Espaçamento entre os botões */
+        gap: 10px;
     }
 
     .btn-cassino {
@@ -42,25 +40,24 @@
         padding: 5px 10px;
         background-color: transparent;
         border: none;
-        color: #fff; /* Ajuste a cor do texto conforme necessário */
+        color: #fff;
         font-size: 16px;
     }
 
 
     .game-frame {
-        flex: 1; /* Faz com que o .game-frame ocupe o espaço disponível */
+        flex: 1;
         justify-content: center;
         align-items: center;
-        position: relative; /* Permite que o iframe se ajuste corretamente */
+        position: relative;
         width: 100%;
         height: 100%;
     }
 
-
     .game-frame iframe {
         width: 100%;
         height: 100%;
-        border: none; /* Remove a borda do iframe */
+        border: none;
     }
 
     .card-small {
@@ -173,4 +170,8 @@
         padding: 10px 20px;
         font-size: 16px;
     }
+}
+
+@media (min-width: 483px){
+
 }
