--- a/src/app/clientes/carteira/carteira.component.html
+++ b/src/app/clientes/carteira/carteira.component.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="balance-item">
                         <span>Saldo Bloqueado</span>
-                        <span>{{ balance - withdrawAvailable | currency }}</span>
+                        <span>{{  withdrawBlocked | currency }}</span>
                     </div>
                     <div class="balance-item">
                         <span>Bônus Esportes</span>
