--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -175,9 +175,9 @@
 @media (min-width: 483px){
     .game-view {
         display: flex;
-        flex-direction: column; /* se você quiser que os elementos fiquem em coluna */
-        flex-wrap: nowrap; /* Se desejar evitar quebra */
+        flex-wrap: wrap;
         width: 100%;
+
     }
 
     .aviso h4{
@@ -238,10 +238,10 @@
 
     .header-game-view {
         display: flex;
-        flex-direction: row; /* Para garantir que os elementos fiquem em linha */
-        justify-content: space-between; /* Distribui os elementos entre as extremidades */
-        align-items: center;
+        justify-content: center;
         width: 100%;
+        /* height: 51px; */
+        /* margin-bottom: 12px; */
         border: 1px solid #1B1B1B;
     }
 
