--- a/src/app/casino/gameview/gameview.component.html
+++ b/src/app/casino/gameview/gameview.component.html
@@ -1,6 +1,5 @@
-<div class="game-view">
-
-    <div class="header-game-view" *ngIf="checkIfMobile">
+<div class="game-view" *ngIf="checkIfMobile">
+    <div class="header-game-view" >
         <div class="game-name">
             <ng-container *ngIf="gameFornecedor == 'galaxsys'; else nomeOficialGame">
                 <span>{{ customCasinoName }} Galaxsys</span>
@@ -17,7 +16,7 @@
         </div>
     </div>
     <ng-container>
-        <div *ngIf="checkIfMobile" class="game-view-mobile">
+        <div class="game-view-mobile">
             <div *ngIf="isLoggedIn || gameMode != 'REAL'" class="game-frame">
                 <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
                 <ng-container *ngIf="mobileScreen">
@@ -29,55 +28,77 @@
             </div>
         </div>
 
-        <div *ngIf="isDesktop">
-            <div *ngIf="!isLoggedIn && gameMode == 'REAL'" class="game-frame">
-                <div class="overlay overlay--unauthorized">
-                    <div class="overlay-background" [style.backgroundImage]="'url(' + backgroundImageUrl + ')'">
-                    </div>
-                    <div class="overlay-content -mt-4 p-5">
-                        <div class="card-container">
-                            <div class="card">
-                              <h2 class="card-title">Continuar Jogando...</h2>
-                              <p class="card-text">
-                                Para continuar jogando você precisa se registrar ou fazer login na sua conta.
-                              </p>
-                              <div class="card-buttons">
-                                <button class="btn register-btn" (click)="abrirCadastro()">Registrar-se</button>
-                                <button class="btn login-btn" (click)="abrirLogin()">Entrar</button>
-                              </div>
-                            </div>
+
+        <div *ngIf="!isLoggedIn && gameMode == 'REAL'" class="game-frame">
+            <div class="overlay overlay--unauthorized">
+                <div class="card-small">
+                    <div class="card-content">
+                        <div class="overlay-background" [style.backgroundImage]="'url(' + backgroundImageUrl + ')'"></div>
+                        <div class="card-info">
+                            <h2 class="game-title">Jogo Crash</h2>
+                            <p class="game-provider">Pragmatic</p>
                         </div>
                     </div>
-                    <div class="main-footer">
-                        <app-footer></app-footer>
+                    <div class="card-buttons">
+                        <button class="btn register-btn" (click)="abrirCadastro()">Registrar-se</button>
+                        <button class="btn login-btn" (click)="abrirLogin()">Entrar</button>
+                    </div>
+                </div>
+                <div class="main-footer">
+                    <app-footer></app-footer>
+                </div>
+            </div>
+        </div>
+    </ng-container>
+</div>
+
+<div class="game-view" *ngIf="checkIfDesktop">
+    <div class="header-game-view">
+        <div class="game-name">
+            <ng-container *ngIf="gameFornecedor == 'galaxsys'; else nomeOficialGame">
+                <span> {{ customCasinoName }} Galaxsys </span>
+            </ng-container>
+            <ng-template #nomeOficialGame>
+                <span>{{ gameName }}</span>
+            </ng-template>
+        </div>
+        <div class="buttons-game-view">
+            <ng-container *ngIf="!isAppMobile() && !removerBotaoFullscreen">
+                <a *ngIf="!fullscreen" class="btn-cassino screen-adjust" (click)="openFullscreen()"><i class="fa fa-expand"></i></a>
+                <a *ngIf="fullscreen" class="btn-cassino screen-adjust" (click)="closeFullscreen()"><i class="fa fa-compress"></i></a>
+            </ng-container>
+            <a (click)="back()" class="btn-cassino game-close"><i class="fa fa-times"></i></a>
+        </div>
+    </div>
+    <ng-container>
+        <div *ngIf="isLoggedIn || gameMode != 'REAL'" class="game-frame">
+            <app-spinner *ngIf="showLoadingIndicator"></app-spinner>
+            <ng-container *ngIf="mobileScreen">
+                <iframe *ngIf="gameUrl!=''"  [src]="gameUrl"></iframe>
+            </ng-container>
+            <ng-container *ngIf="!mobileScreen">
+                <iframe *ngIf="gameUrl!=''"  [src]="gameUrl" allowfullscreen></iframe>
+            </ng-container>
+        </div>
+
+        <div *ngIf="!isLoggedIn && gameMode == 'REAL'" class="game-frame">
+            <div class="overlay overlay--unauthorized">
+                <div class="overlay-background" [style.backgroundImage]="'url(' + backgroundImageUrl + ')'">
+                </div>
+                <div class="overlay-content -mt-4 p-5">
+                    <p class="overlay-content__title">registre-se ou faça login</p>
+                    <p class="overlay-content__text">Por favor, registre-se ou faça login para fazer seu primeiro depósito e começar a jogar.</p>
+                    <div class="inline-button">
+
+                        <a class="btn btn-custom w-130 mr-4" (click)="abrirCadastro()">
+                            {{'geral.registreSe' | translate | uppercase}}
+                        </a>
+                        <a (click)="abriModalLogin()" class="botao-entrar btn btn-custom2 w-130" role="button">
+                            {{'geral.entrar' | translate | uppercase}}
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-
-
-        <div *ngIf="checkIfMobile">
-            <div *ngIf="!isLoggedIn && gameMode == 'REAL'" class="game-frame">
-                <div class="overlay overlay--unauthorized">
-                    <div class="card-small">
-                        <div class="card-content">
-                            <div class="overlay-background" [style.backgroundImage]="'url(' + backgroundImageUrl + ')'"></div>
-                            <div class="card-info">
-                                <h2 class="game-title">Jogo Crash</h2>
-                                <p class="game-provider">Pragmatic</p>
-                            </div>
-                        </div>
-                        <div class="card-buttons">
-                            <button class="btn register-btn" (click)="abrirCadastro()">Registrar-se</button>
-                            <button class="btn login-btn" (click)="abrirLogin()">Entrar</button>
-                        </div>
-                    </div>
-                    <div class="main-footer">
-                        <app-footer></app-footer>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </ng-container>
 </div>
