--- a/src/app/home/bilhete/bilhete.component.html
+++ b/src/app/home/bilhete/bilhete.component.html
@@ -26,10 +26,10 @@
                     </div>
                     <div class="">
                         {{ item.cotacao.chave  | oddCategoria}}:
-                        <span *ngIf="item.jogo.sport_id == soccerId">
+                        <span *ngIf="item.jogo.sport_id == footballId">
                             {{item.cotacao.chave | tipoAposta}}
                         </span>
-                            <span *ngIf="item.jogo.sport_id != soccerId;">
+                            <span *ngIf="item.jogo.sport_id != footballId;">
                             {{item.cotacao.chave | tipoApostaCustom: item.jogo.time_a_nome :item.jogo.time_b_nome}}
                         </span>
                         <span class="valor">
@@ -160,7 +160,7 @@
                             {{item.cotacao.nome}}
                         </span>
                         <ng-template #chave>
-                            <span *ngIf="item.jogo.sport_id == soccerId; else nomeOddCustom">
+                            <span *ngIf="item.jogo.sport_id == footballId; else nomeOddCustom">
                                 {{item.cotacao.chave | tipoAposta}}
                             </span>
                             <ng-template #nomeOddCustom>
