--- a/src/app/esportes/live/jogo/live-jogo.component.html
+++ b/src/app/esportes/live/jogo/live-jogo.component.html
@@ -134,7 +134,7 @@
                             <div class="time-nome">
                                 {{jogo?.time_a_nome}}
                             </div>
-                            <div class="game-stats" *ngIf="jogo?.sport_id == soccerId">
+                            <div class="game-stats" *ngIf="jogo?.sport_id == footballId">
                                 <div class="game-stats-item">
                                     <div class="game-card">
                                         <svg width="13" height="15" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -173,7 +173,7 @@
                             <div class="time-nome">
                                 {{jogo?.time_b_nome}}
                             </div>
-                            <div class="game-stats" *ngIf="jogo?.sport_id == soccerId">
+                            <div class="game-stats" *ngIf="jogo?.sport_id == footballId">
                                 <div class="game-stats-item">
                                     <div class="game-card">
                                         <svg width="13" height="15" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -196,7 +196,7 @@
                 </div>
                 <div class="aovivo-tempo">
                     <div class="aovivo-label"><i class="fa fa-circle blink_me"></i> AO VIVO</div>
-                    <div class="tempo" *ngIf="jogo?.info?.tempo != 0 && jogo.sport_id == soccerId">{{jogo.info?.tempo}}º {{jogo.info?.minutos}}'</div>
+                    <div class="tempo" *ngIf="jogo?.info?.tempo != 0 && jogo.sport_id == footballId">{{jogo.info?.tempo}}º {{jogo.info?.minutos}}'</div>
                     <div class="tempo" *ngIf="jogo?.info?.tempo != 0 && jogo.sport_id == basketballId">Q{{jogo.info?.tempo}} {{jogo.info?.minutos}}'</div>
                     <div class="tempo" *ngIf="jogo?.info?.tempo == 0">Intervalo</div>
                 </div>
