--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -2,8 +2,6 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    position: fixed;
-    z-index: 2147483647;
 }
 
 .aviso h4{
@@ -157,7 +155,7 @@ iframe{
         background-color: #000;
         width: 100%;
         height: 100%;
-        z-index: 2147483647;
+        z-index: 10000;
         top: 0;
     }
  
