--- a/src/styles.css
+++ b/src/styles.css
@@ -642,7 +642,7 @@ button {
 }
 
 .modal {
-    z-index: 10000;
+    z-index: 90002;
 }
 
 .modal-header, .modal-body, .modal-footer{
@@ -1729,11 +1729,11 @@ ngb-datepicker-month {
 @media only screen and (max-width: 1024px) {
 
     .modal-login{
-        z-index: 2147483647 !important;
+        z-index: 90002 !important;
     }
     
     .modal-cadastro-cliente {
-        z-index: 2147483647 !important;
+        z-index: 90002 !important;
     }
 
     *::-webkit-scrollbar{
