--- a/src/app/esportes/generico/wrapper/generico-wrapper.component.html
+++ b/src/app/esportes/generico/wrapper/generico-wrapper.component.html
@@ -10,7 +10,7 @@
             </app-generico-listagem>
         </div>
         <div class="jogo" [hidden]="!exibirMaisCotacoes">
-            <app-basquete-jogo *ngIf="sportId == '48242'" [jogoId]="jogoId" [sportId]="sportId"
+            <app-basquete-jogo *ngIf="sportId == '48242' || sportId == '18'" [jogoId]="jogoId" [sportId]="sportId"
                                (exibirMaisCotacoes)="changeExibirMaisCotacoes($event)"
                                [exibindoMaisCotacoes]="exibirMaisCotacoes">
             </app-basquete-jogo>
